# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import authRouter from "./auth";
 import usersRouter from "./users";
 import shiftsRouter from "./shifts";
 import shiftAssignmentsRouter from "./shift-assignments";
+import dailyAssignmentsRouter from "./daily-assignments";
 import scheduleRouter from "./schedule";
 import dayOffRequestsRouter from "./day-off-requests";
 import dashboardRouter from "./dashboard";
@@ -16,6 +17,7 @@ router.use(authRouter);
 router.use(usersRouter);
 router.use(shiftsRouter);
 router.use(shiftAssignmentsRouter);
+router.use(dailyAssignmentsRouter);
 router.use(scheduleRouter);
 router.use(dayOffRequestsRouter);
 router.use(dashboardRouter);
