# lib/db/src/schema/index.ts
@@ -1,5 +1,6 @@
 export * from "./users";
 export * from "./shifts";
 export * from "./shiftAssignments";
+export * from "./dailyAssignments";
 export * from "./dayOffRequests";
 export * from "./notificationLogs";
